testsuite/tests/typecheck/should_fail/tcfail225.stderr

tcfail225.hs:8:19: error: [GHC-25897]
    • Couldn't match kind ‘k’ with ‘*’
      Expected kind ‘k -> *’, but ‘Maybe’ has kind ‘* -> *’
    • In the first argument of ‘T’, namely ‘Maybe’
      In the type ‘T Maybe (m a)’
      In the definition of data constructor ‘MkT’
